--- a/src/assets/CSS/style.css
+++ b/src/assets/CSS/style.css
@@ -33,3 +33,18 @@
     width: 100%;
   }
 }
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap; 
+}
+
+.card {
+  margin-right: 16px;
+  margin-bottom: 16px;
+}
+
+.card img {
+  width: 100%;
+  height: auto;
+}
