--- a/src/assets/CSS/style.css
+++ b/src/assets/CSS/style.css
@@ -25,4 +25,15 @@
 width: 250px;
 }
 
+@media (max-width: 767px) {
+  .home {
+    font-size: 1.5em;
+  }
+  .content {
+    width: 90%;
+  }
+  .image-container {
+    width: 90%;
+  }
+}
 
